fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,10 @@ header > h4 {
   /* flex: 3; */
   width: 40%;
   padding: 10px;
+
+  display: flex;
+  flex-direction: column;
+  flex-flow: wrap;
 }
 @media only screen and (max-width: 700px) {
   .banner-content {
@@ -67,12 +71,15 @@ header > h4 {
 }
 .banner-heading {
   margin-top: 15px;
-  line-height: 1;
+  line-height: 1.2;
+  font-size: 1.6em;
 }
 .banner-p {
   color: #8a8a8a;
   font-size: 0.9rem;
-  line-height: 1.5;
+  line-height: 1.6;
+  margin-top: 0;
+  margin-bottom: 23px;
 }
 .signup {
   background-color: #2a8ff7;
@@ -126,6 +133,22 @@ header > h4 {
   flex-direction: column;
   margin: 20px;
   max-width: 320px;
+
+  /* background-color: #f8fbfc; */
+  /* border: 1px solid #ccc; */
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.02), 0 0px 2px rgba(0, 0, 0, 0.14);
+  padding: 30px 30px;
+  justify-content: center;
+  align-content: center;
+  border-radius: 5px;
+}
+@media only screen and (max-width: 600px) {
+  .content-card {
+    margin: 20px 3px;
+  }
+  .content-cards {
+    margin: 20px;
+  }
 }
 
 .card-header {
